--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "biscuit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Luc1ferMorningstar.github.io/biscuit",
   "dependencies": {
     "express": "^4.16.3",
+    "gh-pages": "^1.1.0",
     "node-sass-chokidar": "^1.2.1",
     "npm-run-all": "^4.1.2",
     "path": "^0.12.7",
@@ -20,6 +22,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start-prod": "react-scripts build && node server.prod.js"
+    "start-prod": "react-scripts build && node server.prod.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
