--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start-prod": "react-scripts build && node server.prod.js",
+    "start-prod": "npm run build && node server.prod.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
