--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icon-base": "^2.1.2",
     "react-scripts": "1.1.1"
   },
   "scripts": {
