--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass-chokidar": "^1.2.1",
     "npm-run-all": "^4.1.2",
     "path": "^0.12.7",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icon-base": "^2.1.2",
